--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "author": "Victor_D",
   "license": "Did not invent",
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.4",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.23.0",
+    "chai": "^4.2.0",
     "ganache-cli": "^6.9.1",
     "truffle": "^5.0.0",
-    "chai": "^4.2.0",
-    "@openzeppelin/test-helpers": "^0.5.4",
     "zeppelin-solidity": "^1.4.0"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2016": "^6.24.1",
     "solc": "^0.6.3"
   }
 }
