--- a/.gitignore
+++ b/.gitignore
@@ -212,6 +212,7 @@ crashlytics-build.properties
 fabric.properties
 
 # Editor-based Rest Client
+.idea
 .idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
